cmake_minimum_required(VERSION 3.5)
project(capiflash)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    obj/tests/perf_eval.c
    src/block/test/aaaasm.c
    src/block/test/async.c
    src/block/test/blk_api_tst.c
    src/block/test/blk_tst.h
    src/block/test/blockio.c
    src/block/test/blockio_odl.c
    src/block/test/blockio_old.c
    src/block/test/blocklistio.c
    src/block/test/blockplistio.c
    src/block/test/capi_hardware_cache.c
    src/block/test/fvt_block.C
    src/block/test/perf_eval.c
    src/block/test/run_block_fvt.C
    src/block/cflash_block.c
    src/block/cflash_block_aix.h
    src/block/cflash_block_inline.h
    src/block/cflash_block_int.c
    src/block/cflash_block_internal.h
    src/block/cflash_block_kern_mc.c
    src/block/cflash_block_linux.c
    src/block/cflash_block_protos.h
    src/block/cflash_block_sisl.c
    src/cflash/test/119.c
    src/cflash/test/174.c
    src/cflash/test/174_175.c
    src/cflash/test/188.c
    src/cflash/test/190.c
    src/cflash/test/191.c
    src/cflash/test/192.c
    src/cflash/test/193.c
    src/cflash/test/196.c
    src/cflash/test/197.c
    src/cflash/test/198.c
    src/cflash/test/203.c
    src/cflash/test/209.c
    src/cflash/test/210.c
    src/cflash/test/211.c
    src/cflash/test/215.c
    src/cflash/test/216.c
    src/cflash/test/asmrw.h
    src/cflash/test/cflash_test.h
    src/cflash/test/cflash_test2.c
    src/cflash/test/cflash_test_engine.c
    src/cflash/test/cflash_test_error.c
    src/cflash/test/cflash_test_error2.c
    src/cflash/test/cflash_test_excp.c
    src/cflash/test/cflash_test_io.c
    src/cflash/test/cflash_test_ioctl.c
    src/cflash/test/cflash_test_ioctl_io.c
    src/cflash/test/cflash_test_util.c
    src/cflash/test/fvt_cflash.C
    src/cflash/test/fvt_ini.C
    src/cflash/test/manual.c
    src/cflash/test/run_cflash_fvt.C
    src/cflash/cxlfcommon.c
    src/cflash/cxlfcommon.h
    src/cflash/cxlfd.c
    src/cflash/cxlfd.h
    src/cflash/cxlfini.c
    src/cflash/cxlfini.h
    src/cflash/cxlflashutil.c
    src/cflash/cxlflashutil.h
    src/common/cblk_mc.c
    src/common/cflash_scsi_user.c
    src/common/cflash_tools_user.c
    src/include/afu.h
    src/include/afu_fc.h
    src/include/capi_aix_types.h
    src/include/capiblock.h
    src/include/cblk.h
    src/include/cflash_eras.h
    src/include/cflash_mmio.h
    src/include/cflash_scsi_user.h
    src/include/cflash_sisl.h
    src/include/cflash_tools_user.h
    src/include/cxl.h
    src/include/libcxl.h
    src/include/mclient.h
    src/include/prov.h
    src/include/provextstructs.h
    src/include/provutil.h
    src/include/revtags.h
    src/include/sislite.h
    src/include/trace_log.h
    src/include/ut.h
    src/include/zmalloc.h
    src/kv/test/_tst_ark.c
    src/kv/test/_tst_bl.c
    src/kv/test/_tst_bt.c
    src/kv/test/_tst_bv.c
    src/kv/test/_tst_cb.c
    src/kv/test/_tst_cl.c
    src/kv/test/_tst_ht.c
    src/kv/test/_tst_iv.c
    src/kv/test/_tst_kv_utils.c
    src/kv/test/_tst_persist.c
    src/kv/test/_tst_tg.c
    src/kv/test/_tst_vi.c
    src/kv/test/fvt_ark_io.C
    src/kv/test/fvt_ark_io_inject.C
    src/kv/test/fvt_ark_mc_aio.C
    src/kv/test/fvt_ark_mcio.C
    src/kv/test/fvt_ark_perf.C
    src/kv/test/fvt_ark_perf2.C
    src/kv/test/fvt_ark_perf_check.C
    src/kv/test/fvt_ark_perf_tool.C
    src/kv/test/fvt_kv.h
    src/kv/test/fvt_kv_fixme1.C
    src/kv/test/fvt_kv_tst_ark.C
    src/kv/test/fvt_kv_tst_async_cb.C
    src/kv/test/fvt_kv_tst_bins.C
    src/kv/test/fvt_kv_tst_bl.C
    src/kv/test/fvt_kv_tst_bt.C
    src/kv/test/fvt_kv_tst_bv.C
    src/kv/test/fvt_kv_tst_errors.C
    src/kv/test/fvt_kv_tst_ht.C
    src/kv/test/fvt_kv_tst_iv.C
    src/kv/test/fvt_kv_tst_persist.C
    src/kv/test/fvt_kv_tst_scenario.C
    src/kv/test/fvt_kv_tst_simple.C
    src/kv/test/fvt_kv_tst_sync_async.C
    src/kv/test/fvt_kv_tst_sync_pth.C
    src/kv/test/fvt_kv_tst_tg.C
    src/kv/test/fvt_kv_tst_vi.C
    src/kv/test/fvt_kv_utils.C
    src/kv/test/fvt_kv_utils.h
    src/kv/test/fvt_kv_utils_ark_io.C
    src/kv/test/fvt_kv_utils_ark_io.h
    src/kv/test/fvt_kv_utils_async_cb.C
    src/kv/test/fvt_kv_utils_async_cb.h
    src/kv/test/fvt_kv_utils_sync_pth.C
    src/kv/test/fvt_kv_utils_sync_pth.h
    src/kv/test/fvt_trace.c
    src/kv/test/fvt_trace.h
    src/kv/test/kv_utils_db.c
    src/kv/test/kv_utils_db.h
    src/kv/test/mapreduce_kv_syn.c
    src/kv/test/res_pers.c
    src/kv/test/run_async_cb.C
    src/kv/test/run_err.C
    src/kv/test/run_fvt_kv.C
    src/kv/test/run_kv_async.c
    src/kv/test/run_kv_async_multi.c
    src/kv/test/run_kv_benchmark.c
    src/kv/test/run_kv_persist.c
    src/kv/test/run_kv_sync.c
    src/kv/test/run_scenarios.C
    src/kv/test/run_simple.C
    src/kv/test/run_sync_async.C
    src/kv/test/run_sync_pth.C
    src/kv/test/test_perf.c
    src/kv/test/tst_ark.c
    src/kv/test/tst_bl.c
    src/kv/test/tst_bl.h
    src/kv/test/tst_bt.c
    src/kv/test/tst_bv.c
    src/kv/test/tst_ht.c
    src/kv/test/tst_iv.c
    src/kv/test/tst_persist.c
    src/kv/test/tst_tg.c
    src/kv/test/tst_vi.c
    src/kv/am.c
    src/kv/am.h
    src/kv/ari.c
    src/kv/ari.h
    src/kv/ark.h
    src/kv/ark_mod.h
    src/kv/arkdb.c
    src/kv/arkdb.h
    src/kv/arkdb_trace.h
    src/kv/arp.c
    src/kv/arp.h
    src/kv/arp_del.c
    src/kv/arp_exist.c
    src/kv/arp_get.c
    src/kv/arp_set.c
    src/kv/bl.c
    src/kv/bl.h
    src/kv/bt.c
    src/kv/bt.h
    src/kv/bv.c
    src/kv/bv.h
    src/kv/cl.c
    src/kv/cl.h
    src/kv/ct.h
    src/kv/ea.c
    src/kv/ea.h
    src/kv/ea_mod.c
    src/kv/hash.c
    src/kv/hash.h
    src/kv/ht.c
    src/kv/ht.h
    src/kv/iv.c
    src/kv/iv.h
    src/kv/kv.c
    src/kv/kv_inject.c
    src/kv/kv_inject.h
    src/kv/kv_trace.h
    src/kv/ll.c
    src/kv/ll.h
    src/kv/pq.h
    src/kv/queue.c
    src/kv/queue.h
    src/kv/si.c
    src/kv/si.h
    src/kv/sq.c
    src/kv/sq.h
    src/kv/tag.c
    src/kv/tag.h
    src/kv/tg.c
    src/kv/tg.h
    src/kv/ut.c
    src/kv/vi.c
    src/kv/vi.h
    src/lib/arkalloc/zmalloc.c
    src/master/test/fvt_master.C
    src/master/test/mc_test.c
    src/master/test/mc_test.h
    src/master/test/mc_test2.c
    src/master/test/mc_test_engine.c
    src/master/test/mc_test_error.c
    src/master/test/mc_test_io.c
    src/master/test/mc_test_util.c
    src/master/test/run_master_fvt.C
    src/master/block_alloc.c
    src/master/block_alloc.h
    src/master/block_alloc_internal.h
    src/master/mclient.c
    src/master/mclient_test.c
    src/master/mserv.c
    src/master/mserv.h
    src/mykv/mykv.cc
    src/mykv/mykv_client.cc
    src/provisioning/library/provafu.c
    src/provisioning/library/provafu.h
    src/provisioning/library/provutil.c
    src/provisioning/library/provvpd.c
    src/provisioning/library/provvpd.h
    src/provisioning/tool/afuinject.c
    src/provisioning/tool/afuinject.h
    src/provisioning/tool/provtool.c
    src/provisioning/tool/provtool.h
    src/test/ffdc/afu.c
    src/test/ffdc/afu.h
    src/test/ffdc/afu_fc.h
    src/test/ffdc/capi_dev_nodes.c
    src/test/ffdc/capi_dev_nodes.h
    src/test/ffdc/cxl_afu_dump2.c
    src/test/framework/googletest/googlemock/include/gmock/internal/custom/gmock-generated-actions.h
    src/test/framework/googletest/googlemock/include/gmock/internal/custom/gmock-matchers.h
    src/test/framework/googletest/googlemock/include/gmock/internal/custom/gmock-port.h
    src/test/framework/googletest/googlemock/include/gmock/internal/gmock-generated-internal-utils.h
    src/test/framework/googletest/googlemock/include/gmock/internal/gmock-internal-utils.h
    src/test/framework/googletest/googlemock/include/gmock/internal/gmock-port.h
    src/test/framework/googletest/googlemock/include/gmock/gmock-actions.h
    src/test/framework/googletest/googlemock/include/gmock/gmock-cardinalities.h
    src/test/framework/googletest/googlemock/include/gmock/gmock-generated-actions.h
    src/test/framework/googletest/googlemock/include/gmock/gmock-generated-function-mockers.h
    src/test/framework/googletest/googlemock/include/gmock/gmock-generated-matchers.h
    src/test/framework/googletest/googlemock/include/gmock/gmock-generated-nice-strict.h
    src/test/framework/googletest/googlemock/include/gmock/gmock-matchers.h
    src/test/framework/googletest/googlemock/include/gmock/gmock-more-actions.h
    src/test/framework/googletest/googlemock/include/gmock/gmock-more-matchers.h
    src/test/framework/googletest/googlemock/include/gmock/gmock-spec-builders.h
    src/test/framework/googletest/googlemock/include/gmock/gmock.h
    src/test/framework/googletest/googlemock/src/gmock-all.cc
    src/test/framework/googletest/googlemock/src/gmock-cardinalities.cc
    src/test/framework/googletest/googlemock/src/gmock-internal-utils.cc
    src/test/framework/googletest/googlemock/src/gmock-matchers.cc
    src/test/framework/googletest/googlemock/src/gmock-spec-builders.cc
    src/test/framework/googletest/googlemock/src/gmock.cc
    src/test/framework/googletest/googlemock/src/gmock_main.cc
    src/test/framework/googletest/googlemock/test/gmock-actions_test.cc
    src/test/framework/googletest/googlemock/test/gmock-cardinalities_test.cc
    src/test/framework/googletest/googlemock/test/gmock-generated-actions_test.cc
    src/test/framework/googletest/googlemock/test/gmock-generated-function-mockers_test.cc
    src/test/framework/googletest/googlemock/test/gmock-generated-internal-utils_test.cc
    src/test/framework/googletest/googlemock/test/gmock-generated-matchers_test.cc
    src/test/framework/googletest/googlemock/test/gmock-internal-utils_test.cc
    src/test/framework/googletest/googlemock/test/gmock-matchers_test.cc
    src/test/framework/googletest/googlemock/test/gmock-more-actions_test.cc
    src/test/framework/googletest/googlemock/test/gmock-nice-strict_test.cc
    src/test/framework/googletest/googlemock/test/gmock-port_test.cc
    src/test/framework/googletest/googlemock/test/gmock-spec-builders_test.cc
    src/test/framework/googletest/googlemock/test/gmock_all_test.cc
    src/test/framework/googletest/googlemock/test/gmock_ex_test.cc
    src/test/framework/googletest/googlemock/test/gmock_leak_test_.cc
    src/test/framework/googletest/googlemock/test/gmock_link2_test.cc
    src/test/framework/googletest/googlemock/test/gmock_link_test.cc
    src/test/framework/googletest/googlemock/test/gmock_link_test.h
    src/test/framework/googletest/googlemock/test/gmock_output_test_.cc
    src/test/framework/googletest/googlemock/test/gmock_stress_test.cc
    src/test/framework/googletest/googlemock/test/gmock_test.cc
    src/test/framework/googletest/googletest/codegear/gtest_all.cc
    src/test/framework/googletest/googletest/codegear/gtest_link.cc
    src/test/framework/googletest/googletest/include/gtest/internal/custom/gtest-port.h
    src/test/framework/googletest/googletest/include/gtest/internal/custom/gtest-printers.h
    src/test/framework/googletest/googletest/include/gtest/internal/custom/gtest.h
    src/test/framework/googletest/googletest/include/gtest/internal/gtest-death-test-internal.h
    src/test/framework/googletest/googletest/include/gtest/internal/gtest-filepath.h
    src/test/framework/googletest/googletest/include/gtest/internal/gtest-internal.h
    src/test/framework/googletest/googletest/include/gtest/internal/gtest-linked_ptr.h
    src/test/framework/googletest/googletest/include/gtest/internal/gtest-param-util-generated.h
    src/test/framework/googletest/googletest/include/gtest/internal/gtest-param-util.h
    src/test/framework/googletest/googletest/include/gtest/internal/gtest-port-arch.h
    src/test/framework/googletest/googletest/include/gtest/internal/gtest-port.h
    src/test/framework/googletest/googletest/include/gtest/internal/gtest-string.h
    src/test/framework/googletest/googletest/include/gtest/internal/gtest-tuple.h
    src/test/framework/googletest/googletest/include/gtest/internal/gtest-type-util.h
    src/test/framework/googletest/googletest/include/gtest/gtest-death-test.h
    src/test/framework/googletest/googletest/include/gtest/gtest-message.h
    src/test/framework/googletest/googletest/include/gtest/gtest-param-test.h
    src/test/framework/googletest/googletest/include/gtest/gtest-printers.h
    src/test/framework/googletest/googletest/include/gtest/gtest-spi.h
    src/test/framework/googletest/googletest/include/gtest/gtest-test-part.h
    src/test/framework/googletest/googletest/include/gtest/gtest-typed-test.h
    src/test/framework/googletest/googletest/include/gtest/gtest.h
    src/test/framework/googletest/googletest/include/gtest/gtest_pred_impl.h
    src/test/framework/googletest/googletest/include/gtest/gtest_prod.h
    src/test/framework/googletest/googletest/samples/prime_tables.h
    src/test/framework/googletest/googletest/samples/sample1.cc
    src/test/framework/googletest/googletest/samples/sample1.h
    src/test/framework/googletest/googletest/samples/sample10_unittest.cc
    src/test/framework/googletest/googletest/samples/sample1_unittest.cc
    src/test/framework/googletest/googletest/samples/sample2.cc
    src/test/framework/googletest/googletest/samples/sample2.h
    src/test/framework/googletest/googletest/samples/sample2_unittest.cc
    src/test/framework/googletest/googletest/samples/sample3-inl.h
    src/test/framework/googletest/googletest/samples/sample3_unittest.cc
    src/test/framework/googletest/googletest/samples/sample4.cc
    src/test/framework/googletest/googletest/samples/sample4.h
    src/test/framework/googletest/googletest/samples/sample4_unittest.cc
    src/test/framework/googletest/googletest/samples/sample5_unittest.cc
    src/test/framework/googletest/googletest/samples/sample6_unittest.cc
    src/test/framework/googletest/googletest/samples/sample7_unittest.cc
    src/test/framework/googletest/googletest/samples/sample8_unittest.cc
    src/test/framework/googletest/googletest/samples/sample9_unittest.cc
    src/test/framework/googletest/googletest/src/gtest-all.cc
    src/test/framework/googletest/googletest/src/gtest-death-test.cc
    src/test/framework/googletest/googletest/src/gtest-filepath.cc
    src/test/framework/googletest/googletest/src/gtest-internal-inl.h
    src/test/framework/googletest/googletest/src/gtest-port.cc
    src/test/framework/googletest/googletest/src/gtest-printers.cc
    src/test/framework/googletest/googletest/src/gtest-test-part.cc
    src/test/framework/googletest/googletest/src/gtest-typed-test.cc
    src/test/framework/googletest/googletest/src/gtest.cc
    src/test/framework/googletest/googletest/src/gtest_main.cc
    src/test/framework/googletest/googletest/test/gtest-death-test_ex_test.cc
    src/test/framework/googletest/googletest/test/gtest-death-test_test.cc
    src/test/framework/googletest/googletest/test/gtest-filepath_test.cc
    src/test/framework/googletest/googletest/test/gtest-linked_ptr_test.cc
    src/test/framework/googletest/googletest/test/gtest-listener_test.cc
    src/test/framework/googletest/googletest/test/gtest-message_test.cc
    src/test/framework/googletest/googletest/test/gtest-options_test.cc
    src/test/framework/googletest/googletest/test/gtest-param-test2_test.cc
    src/test/framework/googletest/googletest/test/gtest-param-test_test.cc
    src/test/framework/googletest/googletest/test/gtest-param-test_test.h
    src/test/framework/googletest/googletest/test/gtest-port_test.cc
    src/test/framework/googletest/googletest/test/gtest-printers_test.cc
    src/test/framework/googletest/googletest/test/gtest-test-part_test.cc
    src/test/framework/googletest/googletest/test/gtest-tuple_test.cc
    src/test/framework/googletest/googletest/test/gtest-typed-test2_test.cc
    src/test/framework/googletest/googletest/test/gtest-typed-test_test.cc
    src/test/framework/googletest/googletest/test/gtest-typed-test_test.h
    src/test/framework/googletest/googletest/test/gtest-unittest-api_test.cc
    src/test/framework/googletest/googletest/test/gtest_all_test.cc
    src/test/framework/googletest/googletest/test/gtest_break_on_failure_unittest_.cc
    src/test/framework/googletest/googletest/test/gtest_catch_exceptions_test_.cc
    src/test/framework/googletest/googletest/test/gtest_color_test_.cc
    src/test/framework/googletest/googletest/test/gtest_env_var_test_.cc
    src/test/framework/googletest/googletest/test/gtest_environment_test.cc
    src/test/framework/googletest/googletest/test/gtest_filter_unittest_.cc
    src/test/framework/googletest/googletest/test/gtest_help_test_.cc
    src/test/framework/googletest/googletest/test/gtest_list_tests_unittest_.cc
    src/test/framework/googletest/googletest/test/gtest_main_unittest.cc
    src/test/framework/googletest/googletest/test/gtest_no_test_unittest.cc
    src/test/framework/googletest/googletest/test/gtest_output_test_.cc
    src/test/framework/googletest/googletest/test/gtest_pred_impl_unittest.cc
    src/test/framework/googletest/googletest/test/gtest_premature_exit_test.cc
    src/test/framework/googletest/googletest/test/gtest_prod_test.cc
    src/test/framework/googletest/googletest/test/gtest_repeat_test.cc
    src/test/framework/googletest/googletest/test/gtest_shuffle_test_.cc
    src/test/framework/googletest/googletest/test/gtest_sole_header_test.cc
    src/test/framework/googletest/googletest/test/gtest_stress_test.cc
    src/test/framework/googletest/googletest/test/gtest_throw_on_failure_ex_test.cc
    src/test/framework/googletest/googletest/test/gtest_throw_on_failure_test_.cc
    src/test/framework/googletest/googletest/test/gtest_uninitialized_test_.cc
    src/test/framework/googletest/googletest/test/gtest_unittest.cc
    src/test/framework/googletest/googletest/test/gtest_xml_outfile1_test_.cc
    src/test/framework/googletest/googletest/test/gtest_xml_outfile2_test_.cc
    src/test/framework/googletest/googletest/test/gtest_xml_output_unittest_.cc
    src/test/framework/googletest/googletest/test/production.cc
    src/test/framework/googletest/googletest/test/production.h
    src/test/framework/googletest/googletest/xcode/Samples/FrameworkSample/widget.cc
    src/test/framework/googletest/googletest/xcode/Samples/FrameworkSample/widget.h
    src/test/framework/googletest/googletest/xcode/Samples/FrameworkSample/widget_test.cc
    src/test/afu.c
    src/test/asyncstress.c
    src/test/asyncstress2.c
    src/test/blk_test.c
    src/test/capi_dev_nodes.c
    src/test/capi_dev_nodes.h
    src/test/mc.c
    src/test/pathlength_test.c
    src/test/pblkread.c
    src/test/pvtestauto.c
    src/test/pvtestauto.h
    src/test/run_fvt.C
    src/test/transport_test.c
    src/test/transport_test.h
    src/test/unit_test-kv.C
    src/test/xlate.c src/kv/heavy_hitter.c src/kv/heavy_hitter.h src/kv/list.h src/kv/lru2l.c src/kv/lru2l.h src/kv/map.c src/kv/map.h src/kv/lru.c src/kv/lru.h)

include_directories(src/include)
include_directories(src/kv)

add_executable(capiflash ${SOURCE_FILES})